# ainabs-lair

./: .gitignore  main.py  package-lock.json  package.json  pyproject.toml
modules/: enemy.py  game.py  insult_generator.py  player.py  template.py
